# masterclass_overview_mlops_wine_quality_student

./: .gitignore  Makefile  README.md  dvc.yaml  hello.py  pyproject.toml  requirements.txt
.dvc/: config
models/: model.joblib
src/: config_manager.py
src/data_module_def/: data_transformation.py
src/models_module_def/: model_evaluation.py  model_trainer.py
src/pipeline_steps/: stage03_data_transformation.py
