[project]
name = "masterclass-overview-mlops-wine-quality-student"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.5.1",
    "dvc[s3]>=3.58.0",
    "ensure>=1.0.4",
    "fastapi>=0.115.6",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.5",
    "python-box>=7.3.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20241230",
]
